# stack

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.cpu  Dockerfile.cuda  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-serve.txt  test_hydra_config.py  test_installation.py
.github/workflows/: ci.yml
conf/: config.yaml
conf/data/: imdb.yaml
conf/eval/: default.yaml
conf/model/: bert_base.yaml
conf/system/: auto.yaml
conf/train/: default.yaml
examples/: README.md  evaluate_model.py  train_lora.py  train_lora_minimal.py  train_with_trainer.py
serving/: app.py  test_server.py
src/transformers_stack/: __init__.py  cli.py
templates/: dataset_card.md  model_card.md
tests/: __init__.py  conftest.py  test_model.py  test_peft.py  test_tokenization.py
